<resources>
    <string name="app_name">Roomy</string>
    <string name="name">Name:</string>
    <string name="badnumber">Bad Number</string>
    <string name="lecturer">Lecturer</string>
    <string name="course">Course</string>
    <string name="year">Year</string>
    <string name="semester">Semester</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
</resources>